删除无用代码